--- a/SerieA.html
+++ b/SerieA.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+
+<header>
+		<a href="Pagina-2.html">Home</a> <br>
+		<a href="SerieA.html">Serie A</a> <br>
+		<a href="Premier-League.html">Premier League</a> <br>
+		<a href="LaLiga.html">La Liga</a>
+    </header>
     <meta charset="UTF-8">
     <title>Serie A - Il Campionato di Calcio Italiano</title>
     <style>
